[metadata]
name = nionswift
version = 16.11.0
# nionui 7.2.0, timestamp_ns
author = Nion Software
author_email = swift@nion.com
description = Nion Swift: Scientific Image Processing.
long_description = file: README.rst
url = https://github.com/nion-software/nionswift
license = GPL-3.0-only
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    scipy
    numpy>=1.26,<2.0
    h5py
    pytz
    tzlocal
    imageio>=2.19.0
    pillow
    nionutils>=4.11.0,<5.0
    niondata>=15.6.2,<16.0
    nionui>=7.1.0,<8.0
    nionswift-io>=15.2,<16.0

[options.package_data]
nion.swift =
    resources/*
    py.typed
nion.swift.model = resources/color_maps/*

[options.entry_points]
console_scripts =
    nionswift = nion.swift.command:main

[options.packages.find]
include =
    nion
    nion.swift
    nion.swift.model
    nion.swift.test
    nionui_app.nionswift
    nionswift_plugin.none
    nionlib
    nion.typeshed
    nionswift
