[metadata]
name = nionswift
version = 16.16.0
author = Nion Software
author_email = swift@nion.com
description = Nion Swift: Scientific Image Processing.
long_description = file: README.rst
url = https://github.com/nion-software/nionswift
license = GPL-3.0-only
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
    scipy
    numpy >=2.0,<3.0
    h5py
    hdf5plugin
    pytz
    tzlocal
    imageio >=2.19.0
    pillow
    niondata >=15.9,<16.0
    nionui >=10.2,<11.0
    nionswift-io >=15.5,<16.0
    nionutils >=4.14,<5.0

[options.package_data]
nion.swift =
    resources/*
    py.typed
nion.swift.model = resources/color_maps/*

[options.entry_points]
console_scripts =
    nionswift = nion.swift.command:main

[options.packages.find]
include =
    nion
    nion.swift
    nion.swift.model
    nion.swift.test
    nionui_app.nionswift
    nionswift_plugin.none
    nionlib
    nion.typeshed
    nionswift
